<?xml version="1.0"?>
<package format="3">
  <name>rslidar_msg</name>
  <version>1.5.19</version>
  <description>ROS 2 packet message definitions for RoboSense rslidar_sdk.</description>
  <maintainer email="amon.yang@robosense.cn">robosense</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
