<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wtb_vehicle_launch</name>
  <version>0.0.0</version>
  <description>WTB vehicle launch files for Autoware</description>
  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>can_bridge</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>wtb_car_driver</exec_depend>
  <exec_depend>wtb_vehicle_description</exec_depend>
  <exec_depend>wtb_sensor_kit_description</exec_depend>
  <exec_depend>wtb_vehicle_interface</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tier4_vehicle_launch</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
