<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wvcsc_sensor_kit_launch</name>
  <version>0.0.0</version>
  <description>WVCSC sensor kit launch files for Autoware</description>
  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>wvcsc_sensor_kit_description</exec_depend>
  <exec_depend>wvcsc_vehicle_description</exec_depend>
  <exec_depend>wvcsc_common_sensor_launch</exec_depend>
  <exec_depend>fdilink_ahrs</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>autoware_vehicle_velocity_converter</exec_depend>
  <exec_depend>autoware_perception_msgs</exec_depend>
  <exec_depend>can_bridge</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>wtb_car_driver</exec_depend>
  <exec_depend>wvcsc_vehicle_launch</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
